# mx-sdk-rs-0.22.8-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  vm-test-build-copy.sh
denali/: example.scen.json
dharitri-codec/: Cargo.toml
dharitri-codec-derive/: Cargo.toml
dharitri-codec/src/: lib.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs  log_util.rs  macros.rs
dharitri-wasm/src/api/: blockchain_api.rs  call_value_api.rs  send_api.rs
dharitri-wasm/src/api/managed_types/: managed_type_api.rs
dharitri-wasm/src/api/uncallable/: send_api_uncallable.rs
dharitri-wasm/src/contract_base/wrappers/: blockchain_wrapper.rs  managed_type_helper.rs  send_wrapper.rs  serializer.rs
dharitri-wasm/src/dct/: system_sc_proxy.rs
dharitri-wasm/src/hex_call_data/: cd_de.rs  cd_ser.rs
dharitri-wasm/src/io/: arg_de_input.rs  dyn_arg_input.rs  finish.rs  signal_error.rs
dharitri-wasm/src/storage/: storage_get.rs  storage_key.rs  storage_set.rs
dharitri-wasm/src/types/general/: dct_local_role.rs  dct_token_payment.rs  dct_token_payment_multi_arg.rs  mod.rs  token_identifier.rs
dharitri-wasm/src/types/interaction/: arg_buffer_managed.rs  callback_closure.rs  contract_call.rs  contract_deploy.rs
dharitri-wasm/src/types/managed/: big_int.rs  big_uint.rs  elliptic_curve.rs  managed_address.rs  managed_buffer.rs  managed_buffer_cached_builder.rs  managed_byte_array.rs  managed_multi_result_vec.rs  managed_ref.rs  managed_vec.rs
dharitri-wasm/src/types/managed_codec/: managed_buffer_top_de_input.rs  managed_bytes_nested_de_input.rs  managed_bytes_top_de_input.rs
(+305 files in other folders)
