[package]
name = "dharitri-wasm"
version = "0.2.9"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
cb_closure_managed_deser = []

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }
hashbrown = "0.11.2"
hex-literal = "0.3.1"

[dependencies.dharitri-wasm-derive]
version = "=0.2.9"
path = "../dharitri-wasm-derive"

[dependencies.dharitri-codec]
version = "0.1.2"
path = "../dharitri-codec"
features = ["derive"]
